fix bug ui on mobile

--- a/game/4digit/main.css
+++ b/game/4digit/main.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #fff;
   margin: 0;
@@ -23,11 +27,11 @@ body {
 }
 
 #text-input {
-  width: 75%;
+  width: 70%;
   padding: 8px;
 }
 
 #input-send {
-  width: 15%;
+  width: 30%;
   padding: 8px;
 }
